--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.baidu.palette"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,4 +28,6 @@ dependencies {
     implementation 'com.android.support:palette-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    api 'com.github.open-android:Glide-transformations:0.1.0'
+
 }
