--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -19,9 +20,16 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        jcenter()
         maven { url "https://jitpack.io" }
     }
 
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+             options.encoding = 'UTF-8'
+             options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 
