--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     api 'com.github.open-android:Glide-transformations:0.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation project(':tpalette')
-//    implementation 'com.github.jianjin33:BaiduPalette:0.0.2'
-
+//    implementation project(':tpalette')
+    implementation 'com.github.jianjin33:BaiduPalette:0.0.3'
+    implementation 'com.android.support:palette-v7:28.0.0'
 }
